[gd_scene load_steps=8 format=3 uid="uid://cy11r0ax0oc6c"]

[ext_resource type="Script" path="res://combat_system.gd" id="1_5hxsh"]
[ext_resource type="Texture2D" uid="uid://cqnn3ayd1ig60" path="res://resources/sprites/hands/HandPaperHuman.png" id="2_26pfx"]
[ext_resource type="Texture2D" uid="uid://cycarkn5etaa0" path="res://resources/sprites/hands/HandPaperFoe.png" id="2_gd2uv"]
[ext_resource type="Texture2D" uid="uid://bflnxyb5yuu10" path="res://resources/sprites/hands/HandRockHuman.png" id="3_b2w08"]
[ext_resource type="Texture2D" uid="uid://ba806ov3sguo4" path="res://resources/sprites/hands/HandRockFoe.png" id="3_oqaoi"]
[ext_resource type="Texture2D" uid="uid://b7so6emulk36t" path="res://resources/sprites/hands/HandScissorsHuman.png" id="4_cfea5"]
[ext_resource type="Texture2D" uid="uid://chmsdrwr6xxvs" path="res://resources/sprites/hands/HandScissorsFoe.png" id="4_pu08t"]

[node name="CombatUi" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hxsh")
enemyPaperHand = ExtResource("2_gd2uv")
enemyRockHand = ExtResource("3_oqaoi")
enemyScissorsHand = ExtResource("4_pu08t")

[node name="VSplitContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CenterContainer" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2

[node name="LabelEnemyMovement" type="Label" parent="VSplitContainer/CenterContainer"]
layout_mode = 2
text = "Enemy Movement"

[node name="EnemyResult" type="Label" parent="VSplitContainer/CenterContainer"]
layout_mode = 2
text = "
"

[node name="EnemyHand" type="TextureRect" parent="VSplitContainer/CenterContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2

[node name="LabelPlayerMovement" type="Label" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Player Movement"

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Paper" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Paper"
icon = ExtResource("2_26pfx")

[node name="Rock" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rock
"
icon = ExtResource("3_b2w08")

[node name="Scissors" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scissors"
icon = ExtResource("4_cfea5")

[node name="VBoxContainer-2" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2

[node name="LabelResult" type="Label" parent="VSplitContainer/VBoxContainer-2"]
layout_mode = 2
text = "Result"

[node name="Result" type="Label" parent="VSplitContainer/VBoxContainer-2"]
layout_mode = 2

[node name="QTButton" type="Button" parent="VSplitContainer"]
visible = false
layout_mode = 2
text = "Press Here Very Fast"

[node name="QTTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/Paper" to="." method="_on_button_pressed" binds= ["paper"]]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/Rock" to="." method="_on_button_pressed" binds= ["rock"]]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/Scissors" to="." method="_on_button_pressed" binds= ["scissors"]]
[connection signal="pressed" from="VSplitContainer/QTButton" to="." method="_on_qt_button_pressed"]
[connection signal="timeout" from="QTTimer" to="." method="_on_qt_timer_timeout"]
